--- a/src/Pages/Homepage.css
+++ b/src/Pages/Homepage.css
@@ -42,29 +42,26 @@
 
 @media screen and (min-width: 800px) {
     .header {
-        /* border: solid 1px red; */
         display: flex;
-        margin: auto;
+        /* margin: auto; */
         flex-direction: row-reverse;
-        flex-direction: center;
-        padding: 0 max(50px,10vw);
+        
     }
     .headerContent {
-        /* border: solid 1px orange; */
         text-align: left;
-        max-width: 50%;
-        padding: 30px 50px 0 50px;
+        width: 50%;
+        max-width: 560px;
+        padding: 30px;
+        margin-right: 0;
     }
     .heading {
         font-weight: 400;
         font-size: 2.5rem;
     }
-    .content1 {
-
-    }
     .heroImage {
-        width: max(50%,360px);
-        /* border: solid 2px blue; */
+        margin-left: 0;
+        width: 50%;
+        max-width: 560px;
     }
     
 }
